Added build script